// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/pagination/demo/basic.md correctly 1`] = `
<ul unselectable="unselectable" class="ant-pagination">
  <li title="Previous Page" tabindex="0" class=" ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
        </svg></i></a></li>
  <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1"><a>1</a></li>
  <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2 ant-pagination-item-active"><a>2</a></li>
  <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
  <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
  <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
  <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
        </svg></i></a></li>
  <!---->
</ul>
`;

exports[`renders ./components/pagination/demo/changer.md correctly 1`] = `
<div>
  <ul unselectable="unselectable" class="ant-pagination">
    <li title="Previous Page" tabindex="0" class=" ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
          </svg></i></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1"><a>1</a></li>
    <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
    <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3 ant-pagination-item-active"><a>3</a></li>
    <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
    <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"><a>5</a></li>
    <li title="Next 5 Pages" tabindex="0" class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"><a class="ant-pagination-item-link">
        <div class="ant-pagination-item-container"><i aria-label="icon: double-right" class="ant-pagination-item-link-icon anticon anticon-double-right"><svg viewBox="64 64 896 896" data-icon="double-right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
              <path d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 0 0 188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 0 0 492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"></path>
            </svg></i><span class="ant-pagination-item-ellipsis">•••</span></div>
      </a></li>
    <li title="50" tabindex="0" class="ant-pagination-item ant-pagination-item-50"><a>50</a></li>
    <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
          </svg></i></a></li>
    <li class="ant-pagination-options">
      <div tabindex="0" class="ant-select ant-select-enabled ant-pagination-options-size-changer">
        <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-controls="test-uuid" class="ant-select-selection ant-select-selection--single">
          <div class="ant-select-selection__rendered">
            <div title="10 / page" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">10 / page</div>
          </div><span unselectable="on" class="ant-select-arrow" style="user-select: none;"><i aria-label="icon: down" class="ant-select-arrow-icon anticon anticon-down"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></i></span>
        </div>
      </div>
    </li>
  </ul> <br>
  <ul unselectable="unselectable" class="ant-pagination">
    <li title="Previous Page" tabindex="0" class=" ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
          </svg></i></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1"><a>1</a></li>
    <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
    <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
    <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4 ant-pagination-item-active"><a>4</a></li>
    <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
    <li title="6" tabindex="0" class="ant-pagination-item ant-pagination-item-6 ant-pagination-item-before-jump-next"><a>6</a></li>
    <li title="Next 5 Pages" tabindex="0" class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"><a class="ant-pagination-item-link">
        <div class="ant-pagination-item-container"><i aria-label="icon: double-right" class="ant-pagination-item-link-icon anticon anticon-double-right"><svg viewBox="64 64 896 896" data-icon="double-right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
              <path d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 0 0 188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 0 0 492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"></path>
            </svg></i><span class="ant-pagination-item-ellipsis">•••</span></div>
      </a></li>
    <li title="25" tabindex="0" class="ant-pagination-item ant-pagination-item-25"><a>25</a></li>
    <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
          </svg></i></a></li>
    <li class="ant-pagination-options">
      <div tabindex="0" class="ant-select ant-select-enabled ant-pagination-options-size-changer">
        <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-controls="test-uuid" class="ant-select-selection ant-select-selection--single">
          <div class="ant-select-selection__rendered">
            <div title="20 / page" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">20 / page</div>
          </div><span unselectable="on" class="ant-select-arrow" style="user-select: none;"><i aria-label="icon: down" class="ant-select-arrow-icon anticon anticon-down"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></i></span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/pagination/demo/controlled.md correctly 1`] = `
<ul unselectable="unselectable" class="ant-pagination">
  <li title="Previous Page" tabindex="0" class=" ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
        </svg></i></a></li>
  <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1"><a>1</a></li>
  <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
  <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3 ant-pagination-item-active"><a>3</a></li>
  <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
  <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
  <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
        </svg></i></a></li>
  <!---->
</ul>
`;

exports[`renders ./components/pagination/demo/custom-changer.md correctly 1`] = `
<ul unselectable="unselectable" class="ant-pagination">
  <li title="Previous Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
        </svg></i></a></li>
  <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
  <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
  <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
  <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
  <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
  <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
        </svg></i></a></li>
  <li class="ant-pagination-options">
    <div tabindex="0" class="ant-select ant-select-enabled ant-pagination-options-size-changer">
      <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-controls="test-uuid" class="ant-select-selection ant-select-selection--single">
        <div class="ant-select-selection__rendered">
          <div title="" class="ant-select-selection-selected-value" style="display: block; opacity: 1;"><span>10条/页</span>
            <!---->
          </div>
        </div><span unselectable="on" class="ant-select-arrow" style="user-select: none;"><i aria-label="icon: down" class="ant-select-arrow-icon anticon anticon-down"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></i></span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/itemRender.md correctly 1`] = `
<ul unselectable="unselectable" class="ant-pagination">
  <li title="Previous Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-prev"><a>Previous</a></li>
  <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
  <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
  <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
  <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
  <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"><a>5</a></li>
  <li title="Next 5 Pages" tabindex="0" class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"><a class="ant-pagination-item-link">
      <div class="ant-pagination-item-container"><i aria-label="icon: double-right" class="ant-pagination-item-link-icon anticon anticon-double-right"><svg viewBox="64 64 896 896" data-icon="double-right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 0 0 188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 0 0 492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"></path>
          </svg></i><span class="ant-pagination-item-ellipsis">•••</span></div>
    </a></li>
  <li title="50" tabindex="0" class="ant-pagination-item ant-pagination-item-50"><a>50</a></li>
  <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a>Next</a></li>
  <!---->
</ul>
`;

exports[`renders ./components/pagination/demo/jump.md correctly 1`] = `
<ul unselectable="unselectable" class="ant-pagination">
  <li title="Previous Page" tabindex="0" class=" ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
        </svg></i></a></li>
  <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1"><a>1</a></li>
  <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2 ant-pagination-item-active"><a>2</a></li>
  <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
  <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
  <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"><a>5</a></li>
  <li title="Next 5 Pages" tabindex="0" class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"><a class="ant-pagination-item-link">
      <div class="ant-pagination-item-container"><i aria-label="icon: double-right" class="ant-pagination-item-link-icon anticon anticon-double-right"><svg viewBox="64 64 896 896" data-icon="double-right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 0 0 188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 0 0 492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"></path>
          </svg></i><span class="ant-pagination-item-ellipsis">•••</span></div>
    </a></li>
  <li title="50" tabindex="0" class="ant-pagination-item ant-pagination-item-50"><a>50</a></li>
  <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
        </svg></i></a></li>
  <li class="ant-pagination-options">
    <div class="ant-pagination-options-quick-jumper">Goto<input type="text"></div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/mini.md correctly 1`] = `
<div id="components-pagination-demo-mini">
  <ul unselectable="unselectable" class="ant-pagination mini">
    <li title="Previous Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
          </svg></i></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
    <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
    <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
    <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
    <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
    <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
          </svg></i></a></li>
    <!---->
  </ul>
  <ul unselectable="unselectable" class="ant-pagination mini">
    <li title="Previous Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
          </svg></i></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
    <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
    <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
    <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
    <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
    <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
          </svg></i></a></li>
    <li class="ant-pagination-options">
      <div tabindex="0" class="ant-select ant-select-enabled ant-select-sm ant-pagination-options-size-changer">
        <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-controls="test-uuid" class="ant-select-selection ant-select-selection--single">
          <div class="ant-select-selection__rendered">
            <div title="10 / page" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">10 / page</div>
          </div><span unselectable="on" class="ant-select-arrow" style="user-select: none;"><i aria-label="icon: down" class="ant-select-arrow-icon anticon anticon-down"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></i></span>
        </div>
      </div>
      <div class="ant-pagination-options-quick-jumper">Goto<input type="text"></div>
    </li>
  </ul>
  <ul unselectable="unselectable" class="ant-pagination mini">
    <li class="ant-pagination-total-text">Total 50 items</li>
    <li title="Previous Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
          </svg></i></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
    <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
    <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
    <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
    <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
    <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
          </svg></i></a></li>
    <!---->
  </ul>
</div>
`;

exports[`renders ./components/pagination/demo/more.md correctly 1`] = `
<ul unselectable="unselectable" class="ant-pagination">
  <li title="Previous Page" tabindex="0" class=" ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
        </svg></i></a></li>
  <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1"><a>1</a></li>
  <li title="Previous 5 Pages" tabindex="0" class="ant-pagination-jump-prev ant-pagination-jump-prev-custom-icon"><a class="ant-pagination-item-link">
      <div class="ant-pagination-item-container"><i aria-label="icon: double-left" class="ant-pagination-item-link-icon anticon anticon-double-left"><svg viewBox="64 64 896 896" data-icon="double-left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M272.9 512l265.4-339.1c4.1-5.2.4-12.9-6.3-12.9h-77.3c-4.9 0-9.6 2.3-12.6 6.1L186.8 492.3a31.99 31.99 0 0 0 0 39.5l255.3 326.1c3 3.9 7.7 6.1 12.6 6.1H532c6.7 0 10.4-7.7 6.3-12.9L272.9 512zm304 0l265.4-339.1c4.1-5.2.4-12.9-6.3-12.9h-77.3c-4.9 0-9.6 2.3-12.6 6.1L490.8 492.3a31.99 31.99 0 0 0 0 39.5l255.3 326.1c3 3.9 7.7 6.1 12.6 6.1H836c6.7 0 10.4-7.7 6.3-12.9L576.9 512z"></path>
          </svg></i><span class="ant-pagination-item-ellipsis">•••</span></div>
    </a></li>
  <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4 ant-pagination-item-after-jump-prev"><a>4</a></li>
  <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
  <li title="6" tabindex="0" class="ant-pagination-item ant-pagination-item-6 ant-pagination-item-active"><a>6</a></li>
  <li title="7" tabindex="0" class="ant-pagination-item ant-pagination-item-7"><a>7</a></li>
  <li title="8" tabindex="0" class="ant-pagination-item ant-pagination-item-8 ant-pagination-item-before-jump-next"><a>8</a></li>
  <li title="Next 5 Pages" tabindex="0" class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"><a class="ant-pagination-item-link">
      <div class="ant-pagination-item-container"><i aria-label="icon: double-right" class="ant-pagination-item-link-icon anticon anticon-double-right"><svg viewBox="64 64 896 896" data-icon="double-right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 0 0 188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 0 0 492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"></path>
          </svg></i><span class="ant-pagination-item-ellipsis">•••</span></div>
    </a></li>
  <li title="50" tabindex="0" class="ant-pagination-item ant-pagination-item-50"><a>50</a></li>
  <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
        </svg></i></a></li>
  <!---->
</ul>
`;

exports[`renders ./components/pagination/demo/simple.md correctly 1`] = `
<ul class="ant-pagination ant-pagination-simple">
  <li title="Previous Page" tabindex="0" class=" ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
        </svg></i></a></li>
  <li title="2/5" class="ant-pagination-simple-pager"><input type="text" size="3"><span class="ant-pagination-slash">／</span>5</li>
  <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
        </svg></i></a></li>
</ul>
`;

exports[`renders ./components/pagination/demo/total.md correctly 1`] = `
<div>
  <ul unselectable="unselectable" class="ant-pagination">
    <li class="ant-pagination-total-text">Total 85 items</li>
    <li title="Previous Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
          </svg></i></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
    <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
    <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
    <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
    <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
    <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
          </svg></i></a></li>
    <!---->
  </ul> <br>
  <ul unselectable="unselectable" class="ant-pagination">
    <li class="ant-pagination-total-text">1-20 of 85 items</li>
    <li title="Previous Page" aria-disabled="true" class="ant-pagination-disabled ant-pagination-prev"><a class="ant-pagination-item-link"><i aria-label="icon: left" class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
          </svg></i></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
    <li title="2" tabindex="0" class="ant-pagination-item ant-pagination-item-2"><a>2</a></li>
    <li title="3" tabindex="0" class="ant-pagination-item ant-pagination-item-3"><a>3</a></li>
    <li title="4" tabindex="0" class="ant-pagination-item ant-pagination-item-4"><a>4</a></li>
    <li title="5" tabindex="0" class="ant-pagination-item ant-pagination-item-5"><a>5</a></li>
    <li title="Next Page" tabindex="0" class=" ant-pagination-next"><a class="ant-pagination-item-link"><i aria-label="icon: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
            <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
          </svg></i></a></li>
    <!---->
  </ul>
</div>
`;
